--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome!</title>
+<title>AyrHills</title>
 </head>
 <body>
 
-<h1>This is Ayr Hills</h1>
+<h1>Welcome to AyrHills</h1>
 <p>Under construction</p>
 
 </body>
